fix: Change MariaDb and SQL tests to Java